--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,9 +1,79 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Elearn</title>
+<html><head>
+<title>Elearn</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="description" content="" />
+<meta name="copyright" content="" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/kickstart.css" media="all" />                  <!-- KICKSTART -->
+<link rel="stylesheet" type="text/css" href="/stylesheets/style.css" media="all" />                          <!-- CUSTOM STYLES -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="/javascripts/kickstart.js"></script>                                  <!-- KICKSTART -->
 </head>
 <body>
-{{{body}}}
-</body>
-</html>
+
+<!-- Menu Horizontal -->
+<ul class="menu">
+<li class="current"><a href="/">Home</a></li>
+<li><a href="/classes">Classes</a></li>
+</ul>
+
+<div class="grid">
+	
+<!-- ===================================== END HEADER ===================================== -->
+	 
+<div class="col_12">
+	<div class="col_9">
+	{{{body}}}
+
+	
+	</div>
+	
+	<div class="col_3">
+	<h5>Student / Instructor Login</h5>
+	<form>
+		<label>Username: </label>
+		<input type="text" name="username" placeholder="username"></input>
+		<label>Password: </label>
+		<input type="password" name="password" placeholder="password"></input>
+		<input class="button" type="submit" value="submit"></input>
+	</form>
+	
+
+	</div>
+	
+	<hr />
+	
+	<div class="col_4">
+	<h4>HTML 101</h4>
+	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore 
+	magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis</p>
+	<a class="button" href="#">View</a>
+	</div>
+	
+	<div class="col_4">
+	<h4>Intro To PHP</h4>
+	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore 
+	magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis</p>
+	<a class="button" href="#">View</a>
+	</div>
+	
+	<div class="col_4">
+	<h4>Learn Node</h4>
+	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore 
+	magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis</p>
+	<a class="button" href="#">View</a>
+	</div>
+	
+
+</div>
+
+</div><!-- END GRID -->
+
+<!-- ===================================== START FOOTER ===================================== -->
+<div class="clear"></div>
+<div id="footer">
+&copy; Copyright 2016 All Rights Reserved. This website was built with <a href="http://www.99lime.com">Elearn</a>
+</div>
+
+</body></html>
