Working Classes Model

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -30,41 +30,14 @@
 	</div>
 	
 	<div class="col_3">
-	<h5>Student / Instructor Login</h5>
-	<form>
-		<label>Username: </label>
-		<input type="text" name="username" placeholder="username"></input>
-		<label>Password: </label>
-		<input type="password" name="password" placeholder="password"></input>
-		<input class="button" type="submit" value="submit"></input>
-	</form>
+	{{>login}}
 	
 
 	</div>
 	
 	<hr />
 	
-	<div class="col_4">
-	<h4>HTML 101</h4>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore 
-	magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis</p>
-	<a class="button" href="#">View</a>
-	</div>
-	
-	<div class="col_4">
-	<h4>Intro To PHP</h4>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore 
-	magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis</p>
-	<a class="button" href="#">View</a>
-	</div>
-	
-	<div class="col_4">
-	<h4>Learn Node</h4>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore 
-	magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis</p>
-	<a class="button" href="#">View</a>
-	</div>
-	
+	{{>classes}}
 
 </div>
 
