Pulling Classes From DB

--- a/views/partials/classes.handlebars
+++ b/views/partials/classes.handlebars
@@ -1,9 +1,8 @@
-<h4>Latest Classes</h4>
-<div class="col_4">
 {{#each classes}}
-	<h4>{{title}}</h4>
-	<p>{{description}}</p>
-	<a class="button" href="/classes/{{_id}}/details">View</a>
+	<div class="col_4">
+		<h4>{{title}}</h4>
+		<p>{{description}}</p>
+		<a class="button" href="/classes/{{_id}}/details">View Class</a>
 	</div>
 {{/each}}
 
