Registration and Password Hashworking

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,5 +2,5 @@
 	<p>
 	Lorem ipsum dolor sit amet, consectetuer <em>adipiscing elit</em>, sed diam nonummy nibh euismod 
 	</p>
-	<a class="button" href="/users/signup">Sugn Up Free</a>
+	<a class="button" href="/users/register">Sugn Up Free</a>
 	<p>You need to signup to register for free classes</p>
