Registration Messgaes Working

--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -1,7 +1,8 @@
 <h2>Create An Account</h2>
 {{#if errors}}
 			{{#each errors}}
-				<div class="notice error"><i class="icon-remove-sign icon-large"></i> {{msg}}
+				<div class="notice error"><i class="icon-remove-sign icon-large"></i> 
+				{{msg}}
 				<a href="#close" class="icon-remove"></a></div>
 			{{/each}}
 		{{/if}}
