--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -24,7 +24,18 @@
 	 
 <div class="col_12">
 	<div class="col_9">
-	{{{messages}}}
+	{{#if success_msg}}
+		<div class="notice success"><i class="icon-remove-sign icon-large"></i> 
+			{{success_msg}}
+			<a href="#close" class="icon-remove"></a>
+		</div>
+	{{/if}}
+	{{#if error_msg}}
+		<div class="notice error"><i class="icon-remove-sign icon-large"></i> 
+			{{error_msg}}
+			<a href="#close" class="icon-remove"></a>
+		</div>
+	{{/if}}
 	{{{body}}}
 
 	
