--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -36,6 +36,12 @@
 			<a href="#close" class="icon-remove"></a>
 		</div>
 	{{/if}}
+	{{#if error}}
+		<div class="notice error"><i class="icon-remove-sign icon-large"></i> 
+			{{error}}
+			<a href="#close" class="icon-remove"></a>
+		</div>
+	{{/if}}
 	{{{body}}}
 
 	
