--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,8 +1,17 @@
-	<h5>Student / Instructor Login</h5>
-	<form>
-		<label>Username: </label>
-		<input type="text" name="username" placeholder="username"></input>
-		<label>Password: </label>
-		<input type="password" name="password" placeholder="password"></input>
-		<input class="button" type="submit" value="submit"></input>
-	</form>
+{{#if user}}
+	<h5>Welcome Back {{user.username}}</h5>
+	<ul class="alt">
+	<li><a href="/{{type}}s/classes">My Classes</a></li>
+	<li><a href="/users/logout">Logout</a></li>
+	</ul>
+{{else}}
+
+<h5>Student / Instructor Login</h5>
+<form method="post" action="/users/login">
+	<label>Username: </label>
+	<input type="text" name="username" placeholder="username"></input>
+	<label>Password: </label>
+	<input type="password" name="password" placeholder="password"></input>
+	<input class="button" type="submit" value="submit"></input>
+</form>
+{{/if}}
